@@ -14,6 +14,12 @@ C++/Tree
     the copy assignment operators for such types are declared private
     and left unimplemented.
 
+  * New option, --generate-dep, triggers the generation of the make
+    dependency file (.d) for the generated C++ files. Other options
+    controlling dependency generation are: --dep-phony, --dep-target,
+    --dep-suffix, and --dep-regex. For details, refer to the XSD
+    compiler command line manual (man pages).
+
   * Binary representation now stores string-based enumerations as integer
     values corresponding to C++ enumerators instead of string literals.
 
